# co2ampel

rust/: .env  .gitignore  Cargo.toml  Vagrantfile  build_deb.sh  make_release.sh
rust/debian/: co2ampel-backend.install  co2ampel-backend.service  control  copyright  dirs  postinst  postrm  rules
rust/migrations/: 20241022190535_create_tables.down.sql  20241022190535_create_tables.up.sql
rust/src/: db.rs  main.rs  schema.rs  static_content.rs
rust/src/assets/: index.html  sensor.html
rust/src/assets/css/: bootstrap-4.3.1.css
