[package]
name = "co2ampel-backend"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
base64 = "0.22.1"
dotenvy = "0.15.7"
headers = "0.4.0"
jiff = { version = "0.1.28", features = ["serde"] }
minijinja = "2.7.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
