[package]
name = "co2ampel-backend"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
dotenvy = "0.15.7"
headers = "0.4.1"
jiff = { version = "0.2.15", features = ["serde"] }
minijinja = "2.11.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
